PC-98: Write the PC-98 mapping table for all 10 possible states, though incomplete for anything other than normal, shift, and control. This is enough to keep Nut Berry happy and possibly any other PC-98 game that needs the keyboard translation tables to run. Update code to reflect that the lookup tables are 0x60, not 0x80 bytes long, because they skip a range of unused scan codes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,8 +3,8 @@ Next:
     keyboard translation table pointer in the BIOS data area for "Nut Berry".
     This Nut Berry game also assumes lookup and translation tables exist at
     specific locations in the ROM BIOS, so put those tables there. The shift
-    state table in BIOS has also been added, though at the moment, they all
-    reflect the normal unshifted state which shouldn't be a problem. (joncampbell123).
+    state table in BIOS has also been added, though at the moment, the tables
+    are incomplete. (joncampbell123).
   - MegaZeux from the MS-DOS days had a 256-color tweakmode that worked on some
     popular SVGA chipsets of it's time though on others it does nothing but halve
     the display resolution of text mode. The basic idea is that it makes the VGA
