--- a/CHANGELOG
+++ b/CHANGELOG
@@ -156,6 +156,7 @@ Next:
   - Added force JIS (JP106) keyboard layout option in PC-98 mode (maron2000)
   - PC-98: Enable mounting partitions with non-genuine IPL entry names (maron2000)
   - Added support for XDF disk format (maron2000)
+  - Added ESFM emulation (ESFMu v1.2 core) (Kagamiin)
   - Added support for ESS "ESFM" sound synthesis (oplemu=esfmu, oplmode=esfm)(Kagamiin)
   - Added experimental/WIP support for the ESS ES1488 sblaster type (sbtype=ess1488)(Kagamiin)
    
