--- a/CHANGELOG
+++ b/CHANGELOG
@@ -174,6 +174,7 @@ Next:
   - Added ESFM emulation (ESFMu v1.2 core) (Kagamiin)
   - Added support for ESS "ESFM" sound synthesis (oplemu=esfmu, oplmode=esfm) (Kagamiin)
   - Added experimental/WIP support for the ESS ES1488 sblaster type (sbtype=ess1488) (Kagamiin)
+  - Delete obsolete information regarding "INTRO SPECIAL" option (maron2000)
    
 2023.10.06
   - Add "VRD" debugger command to force redraw of the VGA screen. (joncampbell123)
