--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 Next:
   - Add "empty drive" CD-RIM image type "IMGMOUNT e: -t iso -empty" as a way
     to emulate an empty CD-ROM drive with no disc in the drive. (joncampbell123).
-  - Add "empty drive" floppy image type "IMGMOUNT 0 -t floppy -fs none -empty"
+  - Add "empty drive" floppy image type "IMGMOUNT 0 empty -t floppy -fs none"
     as a way to emulate a floppy drive with no disk in the drive. (joncampbell123).
   - Video debug overlay: Fix mouse integration misalignment when the video
     debug overlay is enabled while Windows is running (joncampbell123).
