--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 Next:
-  - Add "empty drive" CD-RIM image type "IMGMOUNT e: empty -t iso" as a way
+  - If an empty CD-ROM drive is attached to IDE emulation, return "Medium Not
+    Present" instead of a read error, when asked to read. (joncampbell123).
+  - Add "empty drive" CD-ROM image type "IMGMOUNT e: empty -t iso" as a way
     to emulate an empty CD-ROM drive with no disc in the drive. (joncampbell123).
   - Add "empty drive" floppy image type "IMGMOUNT 0 empty -t floppy -fs none"
     as a way to emulate a floppy drive with no disk in the drive. (joncampbell123).
