--- a/_release_notes/2023.09.01.md
+++ b/_release_notes/2023.09.01.md
@@ -1,6 +1,6 @@
 ---
 slug: 2023.09.01
-date: "Sept. 1, 2023"
+date: "September 1, 2023"
 ---
 
 - Disable by default message confirmation after snapshot and AVI video
