--- a/_release_notes/2023.10.06.md
+++ b/_release_notes/2023.10.06.md
@@ -1,6 +1,6 @@
 ---
 slug: 2023.10.06
-date: "Oct. 6, 2023"
+date: "October 6, 2023"
 ---
 
   - Add "VRD" debugger command to force redraw of the VGA screen.
