--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,10 +4,8 @@ Next:
     The GUI toolkit had them all along, the Configuration GUI was using
     check boxes for that for some reason. (joncampbell123).
   - Linux ALSA MIDI output: Any attempt to send RESET or other Fx commands
-    to the ALSA library causes a segfault. This is a strange segfault in
-    the ALSA library. Work around it by not sending those messages at all,
-    which means those messages do not get sent but DOSBox-X should stop
-    crashing with ALSA MIDI output now. (joncampbell123).
+    to the ALSA library causes a segfault in the ALSA library. Revise the
+    code to send without crashing. (joncampbell123).
   - Linux ALSA MIDI output: Add code to list and enumerate the MIDI sequencer
     devices available so the user can use it to determine what magic numbers
     to put into the midiconfig setting, especially if the user wants to send
