Revise VGA complexity testing to treat all odd/even text as something for the slow I/O memory handler so video modes are handled correctly and the Vectorballs in Unreal can render properly again

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
 Next:
+  - Fix complexity test code to determine when Odd/Even mode is enabled
+    in all cases and to resolve a problem with garbled scrolling text
+    in the "Vectorballs" part of "Unreal" (joncampbell123).
   - M_EGA display mode now applies CRTC BYTE/WORD/DWORD shift to display
     start address, same as M_VGA, to ensure correct display when demos
     and games set the CRTC to non-BYTE modes. This fixes page flipping
