--- a/CHANGELOG
+++ b/CHANGELOG
@@ -132,6 +132,9 @@ Next:
     version is set to 7.1 (maron2000)
   - Fixed some file extensions in tbe filter list were ignored in the file open
     dialogs (maron2000)
+  - Fixed issue that IMGSWAP command did not work for CD drives. (maron2000)
+  - Fixed loaded language file unexpectedly changes on launch. (maron2000)
+  - Added missing language file in Windows standard & XP installers. (maron2000)
 
 2024.03.01
   - If an empty CD-ROM drive is attached to IDE emulation, return "Medium Not
