Correct machine=ega200 modelist regarding mode 6 CGA 640x200 2-color mode [https://github.com/joncampbell123/dosbox-x/issues/5036]

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
 Next:
+  - Correct mode parameters for CGA 640x200 2-color mode when using
+    machine=ega200 so that it displays correctly. (joncampbell123)
   - DOS kernel: Remove fixed hacks for SFT and dynamically allocate the
     second SFT table for the last N - 5 file handles. Add code to zero
     SFT table memory to ensure that random data doesn't cause issues.
